--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -10,20 +10,20 @@
     "2C"
   ],
   "autoFolders": [],
-  "defaultMaxVel": 4.8,
-  "defaultMaxAccel": 4.8,
-  "defaultMaxAngVel": 540.0,
+  "defaultMaxVel": 3.0,
+  "defaultMaxAccel": 3.0,
+  "defaultMaxAngVel": 360.0,
   "defaultMaxAngAccel": 540.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 95.0,
-  "robotMOI": 22.0,
+  "robotMass": 46.4,
+  "robotMOI": 6.8,
   "robotTrackwidth": 0.546,
   "driveWheelRadius": 0.0381,
-  "driveGearing": 4.71,
+  "driveGearing": 4.714285714285714,
   "maxDriveSpeed": 4.8,
   "driveMotorType": "vortex",
-  "driveCurrentLimit": 70.0,
-  "wheelCOF": 0.9,
+  "driveCurrentLimit": 50.0,
+  "wheelCOF": 1.2,
   "flModuleX": 0.273,
   "flModuleY": 0.273,
   "frModuleX": 0.273,
