--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -18,8 +18,8 @@
   "robotMass": 46.4,
   "robotMOI": 6.8,
   "robotTrackwidth": 0.546,
-  "driveWheelRadius": 0.0381,
-  "driveGearing": 4.714285714285714,
+  "driveWheelRadius": 0.0356,
+  "driveGearing": 4.714,
   "maxDriveSpeed": 4.8,
   "driveMotorType": "vortex",
   "driveCurrentLimit": 50.0,
