rio 2.0 and working yippee

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ deploy {
             // want to store a team number in this file.
             team = project.frc.getTeamNumber()
             debug = project.frc.getDebugOrDefault(false)
+            checkImage = false
 
             artifacts {
                 // First part is artifact name, 2nd is artifact type
